working on the stretch goal

--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-    <script id="author-template" type="text/x-handlebars-template">
+    <!-- <script id="author-template" type="text/x-handlebars-template">
       <li><strong>{{name}}</strong>: {{numWords}} words written</li>
-    </script>
+    </script> -->
   </head>
   <body>
     <header class="site-header clearfix">
@@ -31,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <main class="clearfix">
+    <!-- <main class="clearfix">
       <h1>Blog Stats</h1>
       <section id="blog-stats">
         <dt>Total articles:</dt> <dd class="articles"></dd>
@@ -41,7 +41,7 @@
         <ul class="author-stats">
         </ul>
       </section>
-    </main>
+    </main> -->
     <footer>
       &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
