we attempted the stretch goal but could not make it work - all TBDs are complete

--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -65,7 +65,7 @@
           </ul>
         </div>
       </section>
-      <section class="clearfix tab-content" id="admin">
+      <section id="admin" class="clearfix tab-content">
         <h1>Blog Stats</h1>
         <section id="blog-stats">
           <dt>Total articles:</dt> <dd class="articles"></dd>
